syntax = "proto3";

package order;

option go_package = "github.com/payment-platform/proto/order;order";

import "google/protobuf/timestamp.proto";

// Order Service - 订单服务
service OrderService {
  // 订单管理
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc GetOrder(GetOrderRequest) returns (OrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse);
  rpc CancelOrder(CancelOrderRequest) returns (OrderResponse);

  // 订单统计
  rpc GetOrderStats(GetOrderStatsRequest) returns (OrderStatsResponse);
}

// 订单相关消息
message Order {
  string id = 1;
  string order_no = 2;  // 商户订单号
  string merchant_id = 3;
  string customer_id = 4;
  int64 amount = 5;
  string currency = 6;
  string status = 7;  // pending, processing, paid, failed, cancelled, refunded
  string payment_id = 8;
  string channel = 9;
  string payment_method = 10;
  string description = 11;
  string client_ip = 12;
  map<string, string> metadata = 13;
  google.protobuf.Timestamp paid_at = 14;
  google.protobuf.Timestamp cancelled_at = 15;
  google.protobuf.Timestamp created_at = 16;
  google.protobuf.Timestamp updated_at = 17;

  // 新增完整订单字段
  string customer_email = 18;
  string customer_name = 19;
  string customer_phone = 20;
  repeated OrderItem items = 21;       // 订单商品列表
  int64 total_amount = 22;             // 商品总金额（分）
  int64 shipping_fee = 23;             // 运费（分）
  int64 discount_amount = 24;          // 折扣金额（分）
  Address shipping_address = 25;       // 配送地址
  Address billing_address = 26;        // 账单地址
  string remark = 27;                  // 备注
}

// 订单商品项
message OrderItem {
  string product_id = 1;
  string product_name = 2;
  string product_sku = 3;
  string product_image = 4;
  int64 unit_price = 5;      // 单价（分）
  int32 quantity = 6;         // 数量
  map<string, string> attributes = 7;  // 商品属性（如：颜色、尺寸）
}

// 地址信息
message Address {
  string country = 1;
  string province = 2;
  string city = 3;
  string district = 4;
  string street = 5;
  string postal_code = 6;
  string recipient_name = 7;
  string recipient_phone = 8;
}

message CreateOrderRequest {
  string order_no = 1;
  string merchant_id = 2;
  string customer_id = 3;
  int64 amount = 4;           // 总金额（由items计算或手动指定）
  string currency = 5;
  string description = 6;
  string client_ip = 7;
  map<string, string> metadata = 8;

  // 新增完整字段
  string customer_email = 9;
  string customer_name = 10;
  string customer_phone = 11;
  string language = 12;                // 语言代码（如：en, zh-CN）
  repeated OrderItem items = 13;       // 订单商品列表
  string shipping_method = 14;         // 配送方式
  int64 shipping_fee = 15;             // 运费（分）
  Address shipping_address = 16;       // 配送地址
  Address billing_address = 17;        // 账单地址
  int64 discount_amount = 18;          // 折扣金额（分）
  string remark = 19;                  // 备注
}

message GetOrderRequest {
  string id = 1;
  string merchant_id = 2;
}

message ListOrdersRequest {
  string merchant_id = 1;
  string customer_id = 2;
  string status = 3;
  string channel = 4;
  google.protobuf.Timestamp start_time = 5;
  google.protobuf.Timestamp end_time = 6;
  int32 page = 7;
  int32 page_size = 8;
}

message ListOrdersResponse {
  repeated Order orders = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message UpdateOrderStatusRequest {
  string id = 1;
  string merchant_id = 2;
  string status = 3;
  string payment_id = 4;
}

message CancelOrderRequest {
  string id = 1;
  string merchant_id = 2;
  string reason = 3;
}

message OrderResponse {
  Order order = 1;
}

// 订单统计相关消息
message OrderStats {
  int64 total_orders = 1;
  int64 total_amount = 2;
  int64 success_orders = 3;
  int64 failed_orders = 4;
  double success_rate = 5;
  map<string, int64> channel_distribution = 6;
  map<string, int64> daily_stats = 7;
}

message GetOrderStatsRequest {
  string merchant_id = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
}

message OrderStatsResponse {
  OrderStats stats = 1;
}
